UI-3978 fix full width for table profile on tablet

--- a/platform-ui-skin/src/main/webapp/skin/less/_responsive.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/_responsive.less
@@ -808,6 +808,9 @@
     #socialTopLayout .TDContainer {
         display: block;
     }
+    #socialMainLayout table.UITableColumn {
+        width: 100%!important;
+    }
 }
 @media (min-width: 768px) and (max-width: 980px) {
     .active.ToolbarContainer   {
